@@ -76,6 +76,19 @@ elif [ X"${DISTRO}" == X"FREEBSD" ]; then
     # Override default settings.
     export AWSTATS_CONF_WEB="${AWSTATS_CONF_DIR}/awstats.web.conf"
     export AWSTATS_CONF_MAIL="${AWSTATS_CONF_DIR}/awstats.smtp.conf"
+
+elif [ X"${DISTRO}" == X'OPENBSD' ]; then
+    export AWSTATS_HTTPD_ROOT="${HTTPD_SERVERROOT}/awstats/wwwroot"
+    export AWSTATS_ICON_DIR="${AWSTATS_HTTPD_ROOT}/icon"
+    export AWSTATS_CSS_DIR="${AWSTATS_HTTPD_ROOT}/css"
+    export AWSTATS_JS_DIR="${AWSTATS_HTTPD_ROOT}/js"
+    export AWSTATS_CONF_DIR="${AWSTATS_HTTPD_ROOT}/cgi-bin"
+    export AWSTATS_CONF_SAMPLE="${AWSTATS_CONF_DIR}/awstats.model.conf"
+    export AWSTATS_CGI_DIR="${AWSTATS_CONF_DIR}"
+
+    # Override default settings.
+    export AWSTATS_CONF_WEB="${AWSTATS_CONF_DIR}/awstats.web.conf"
+    export AWSTATS_CONF_MAIL="${AWSTATS_CONF_DIR}/awstats.smtp.conf"
 else
     :
 fi
